--- a/66678-h/66678-h.htm
+++ b/66678-h/66678-h.htm
@@ -8676,7 +8676,7 @@ duty of speaking my mind.
 
 <p>
 Now there was but one difficulty; a difficulty
-indeed! how to open the business.  Luckily the orator
+indeed I how to open the business.  Luckily the orator
 himself extricated me from that embarrassment, by
 asking what they said of him in the world at large,
 and whether people were tolerably well pleased with
